[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/SceneManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/DebugInfo.gd" type="Script" id=3]
[ext_resource path="res://Audio/Ball/bubbles_A#_major.wav" type="AudioStream" id=4]
[ext_resource path="res://Scripts/PlayerCamera.gd" type="Script" id=5]
[ext_resource path="res://Fonts/abhaya-libre/AbhayaLibre-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 0.4
glow_bloom = 0.15
glow_blend_mode = 0
glow_high_quality = true

[node name="Game" type="Node"]
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ 120.0 ],
"_edit_vertical_guides_": [ 1800.0 ]
}

[node name="ActiveScene" type="Node" parent="."]

[node name="Title" parent="ActiveScene" instance=ExtResource( 2 )]

[node name="TimerText" type="RichTextLabel" parent="."]
margin_left = 1567.0
margin_top = 140.0
margin_right = 1768.0
margin_bottom = 210.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "00:00.0"

[node name="SceneManager" parent="." instance=ExtResource( 1 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DebugInfo" type="RichTextLabel" parent="."]
visible = false
margin_right = 1907.0
margin_bottom = 41.0
rect_scale = Vector2( 1.5, 1.5 )
text = "debug:"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelComplete" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "BgMusic"

[node name="PlayerCamera" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true
script = ExtResource( 5 )

[node name="ShakeTween" type="Tween" parent="PlayerCamera"]

[node name="Frequency" type="Timer" parent="PlayerCamera"]

[node name="Duration" type="Timer" parent="PlayerCamera"]

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1

[connection signal="timeout" from="PlayerCamera/Frequency" to="PlayerCamera" method="_on_ShakeTimer_timeout"]
[connection signal="timeout" from="PlayerCamera/Duration" to="PlayerCamera" method="_on_Duration_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
